# agent-session-harness

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/agent_session_harness/: __init__.py  __main__.py  activity.py  capsule.py  checkpoint.py  cli.py  config.py  coordinator.py  events.py  governor.py  guardian.py  ledger.py  models.py  outbox.py  process.py  report.py  safety.py  secure_files.py  supervisor.py
src/agent_session_harness/adapters/: __init__.py  beads.py  checkpoint_records.py  claude.py  codex.py  command.py  discovery.py  linear.py  project_safety.py  usage.py
src/agent_session_harness/hooks/: __init__.py  command.py  install.py  native.py
tests/: test_adapter_beads.py  test_adapter_discovery.py  test_adapter_linear.py  test_adapter_project_safety.py  test_adapter_usage.py  test_boundary.py  test_capsule.py  test_checkpoint.py  test_ci_contract.py  test_claude_usage.py  test_cli.py  test_codex_usage.py  test_config.py  test_coordinator.py  test_events.py  test_governor.py  test_hook_install.py  test_hooks.py  test_interactive_pty.py  test_ledger.py  test_ledger_denied_tool_reap.py  test_rotation_e2e.py  test_rotation_e2e_denied_tool.py  test_safety.py  test_secure_files.py  test_supervisor.py
tests/fixtures/: fake_runtime.py
tests/fixtures/adapters/: checkpoint-request-v1.json  claude-rollout-v1.jsonl  codex-rollout-v1.jsonl  lifecycle-v1.jsonl  usage-request-v1.json
tests/fixtures/claude/: duplicate-message.jsonl  missing-message-id.jsonl
tests/fixtures/codex/: child.jsonl  grandchild.jsonl  root.jsonl
tests/fixtures/hooks/: claude-stop-block.json  codex-stop-block.json
