[project]
name = "agent-session-harness"
version = "0.1.0"
description = "Crash-safe context accounting and fresh-session supervision for Claude Code and Codex."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Boundless Studios" }]
dependencies = [
  "platformdirs>=4,<5",
  "pydantic>=2.11,<3",
]

[project.scripts]
agent-session-harness = "agent_session_harness.cli:main"

[project.optional-dependencies]
dev = ["build>=1", "pytest>=8", "ruff>=0.12"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_session_harness"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
