[project]
name = "agent-session-harness"
version = "0.1.0"
description = "Crash-safe context accounting and fresh-session supervision for Claude Code and Codex."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Boundless Studios" }]
dependencies = [
  "agent-coordinator @ git+https://github.com/Boundless-Studios/agent-coordinator.git@v0.3.1",
  "platformdirs>=4,<5",
  "pydantic>=2.11,<3",
]

[project.scripts]
agent-session-harness = "agent_session_harness.cli:main"

[project.optional-dependencies]
dev = ["build>=1", "httpx>=0.27,<1", "pytest>=8", "ruff>=0.12"]
# The beads checkpoint adapter shells out to the `bd` CLI and pulls in no
# Python packages; the extra exists to declare that runtime requirement.
beads = []
linear = ["httpx>=0.27,<1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_session_harness"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
